--- a/src/pages/css/style.css
+++ b/src/pages/css/style.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   --primary-color: #d90000;
   --secondary-color: #ff4d4d;
